tests/errors/return_type_mismatch.wyn
fn get_name() -> string {
    return 42
}

fn main() -> int {
    return 0
}
